Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.10
Description
A user saw MariaDB crash with the following error message and stack trace:
2016-03-31 21:59:16 140234293163776 [Warning] WSREP: cannot get fake InnoDB transaction ID
|
160331 21:59:16 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see http://kb.askmonty.org/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.1.10-MariaDB-enterprise-log
|
key_buffer_size=67108864
|
read_buffer_size=131072
|
max_used_connections=7
|
max_threads=1002
|
thread_count=9
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2266338 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0x7f8ae23f8008
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f8ad73aad40 thread_stack 0x48000
|
mysys/stacktrace.c:247(my_print_stacktrace)[0x7f8ba073e8db]
|
sql/signal_handler.cc:160(handle_fatal_signal)[0x7f8ba029f935]
|
/lib64/libpthread.so.0(+0x3a2580f7e0)[0x7f8b9f8a97e0]
|
sql/wsrep_hton.cc:73(wsrep_register_hton(THD*, bool))[0x7f8ba023c7d4]
|
sql/transaction.cc:292(trans_commit_implicit(THD*))[0x7f8ba02021cd]
|
sql/sql_insert.cc:4337(select_create::send_eof())[0x7f8ba0119a57]
|
sql/sql_select.cc:17982(do_select)[0x7f8ba017189e]
|
sql/sql_select.cc:3228(JOIN::exec_inner())[0x7f8ba0182440]
|
sql/sql_select.cc:2519(JOIN::exec())[0x7f8ba01843bd]
|
sql/sql_select.cc:3453(mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x7f8ba0180d7a]
|
sql/sql_select.cc:384(handle_select(THD*, LEX*, select_result*, unsigned long))[0x7f8ba018469d]
|
sql/sql_parse.cc:3421(mysql_execute_command(THD*))[0x7f8ba0135edf]
|
sql/sql_parse.cc:7302(mysql_parse)[0x7f8ba0136bcd]
|
sql/sql_parse.cc:7126(wsrep_mysql_parse)[0x7f8ba0136ccc]
|
sql/sql_parse.cc:1485(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x7f8ba0139053]
|
sql/sql_parse.cc:1111(do_command(THD*))[0x7f8ba0139c1b]
|
sql/sql_connect.cc:1349(do_handle_one_connection(THD*))[0x7f8ba01f4f9f]
|
sql/sql_connect.cc:1263(handle_one_connection)[0x7f8ba01f50f7]
|
/lib64/libpthread.so.0(+0x3a25807aa1)[0x7f8b9f8a1aa1]
|
/lib64/libc.so.6(clone+0x6d)[0x7f8b9dd8793d]
|
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7f8b8bc8e020): is an invalid pointer
|
Connection ID (thread ID): 21
|
Status: NOT_KILLED
|
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=on,mrr_cost_based=on,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on
|
Attachments
Issue Links
- links to