MDEV-9853: WSREP says it cannot get fake InnoDB transaction ID followed by segmentation fault

Ha_trx_info should not be reset in ha_fake_trx_id() as it is
later used during commit.